Fix post caption issue with overflowing out of it's container.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -248,7 +248,7 @@ hr {
 .card-body-container {
     display: flex;
     flex-direction: column;
-    height: 100%;
+    max-height: none;
     margin-left: 10px;
 }
 
